--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,11 @@
   </head>
 
   <body>
-    <%= flash.each do |key, message|%>
-    <div class="text-center alert alert-<%= key == 'notice' ? 'success' : 'danger' %>">
+    <% flash.each do |key, message| %>
+    <div class="text-center alert alert-<%= key == 'notice'? 'success': 'danger' %>">
       <%= message %>
     </div>
-    <%end%>
+    <% end %>
     <%= yield %>
   </body>
 </html>
